sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:14: error: illegal start of simple expression
      while (a!=0 || ecart >= 1)} } 
                                ^AlgCombSort:14: error: 'while' expected but '}' found.
      while (a!=0 || ecart >= 1)} } 
                                  ^